# matlab-identification

./: .gitignore  DEFAULT_FASTRTPS_PROFILES.xml  MarineRoboticsLib.slx  MarineRoboticsLibAll.slx  MarineRoboticsLibEx.slx  getRosAgentsFromModel.m  lacroma_main.slx  veh_params.m
labust_msgs/: CMakeLists.txt  package.xml
labust_msgs/action/: DynamicPositioning.action
labust_msgs/msg/: IdentModel.msg  NanomodemPayload.msg  NanomodemRange.msg
labust_msgs/srv/: ConfigureAxes.srv  ConfigureVelocityController.srv  Go2depthService.srv  ManualConfigure.srv  RegisterController.srv  RequestExternalReference.srv
matlab_msg_gen/glnxa64/src/auv_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen/glnxa64/src/auv_msgs/include/auv_msgs/: visibility_control.h
matlab_msg_gen/glnxa64/src/auv_msgs/m/+ros/+internal/+ros2/+custommessages/+auv_msgs/: auv_msgs_msg_BodyVelocityRequest_2To1_Converter.m  auv_msgs_msg_NEDArray_1To2_Converter.m  auv_msgs_msg_NEDArray_2To1_Converter.m  auv_msgs_msg_NED_1To2_Converter.m  auv_msgs_msg_WorldWaypointRequest_2To1_Converter.m  bodyVelocityRequest.m  nED.m  navigationStatus.m  vehiclePose.m  vehiclePoseArray.m
matlab_msg_gen/glnxa64/src/auv_msgs/src/: auv_msgs_BodyForceRequest_message.cpp  auv_msgs_BodyVelocityRequest_message.cpp  auv_msgs_NEDArray_message.cpp  auv_msgs_NED_message.cpp  auv_msgs_NavigationStatus_message.cpp  auv_msgs_VehiclePoseArray_message.cpp  auv_msgs_VehiclePose_message.cpp  auv_msgs_WorldWaypointRequest_message.cpp
matlab_msg_gen/glnxa64/src/geographic_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
matlab_msg_gen/glnxa64/src/geographic_msgs/include/geographic_msgs/: visibility_control.h
matlab_msg_gen/glnxa64/src/geographic_msgs/m/+ros/+internal/+ros2/+custommessages/+geographic_msgs/: geoPath.m  geoPoint.m  geographicMapChanges.m  geographic_msgs_msg_GeoPath_2To1_Converter.m  geographic_msgs_msg_GeoPoint_1To2_Converter.m  geographic_msgs_msg_GeoPoint_2To1_Converter.m  geographic_msgs_msg_GeoPoseWithCovarianceStamped_1To2_Converter.m  geographic_msgs_msg_GeoPoseWithCovariance_2To1_Converter.m  geographic_msgs_msg_GeoPose_2To1_Converter.m  geographic_msgs_msg_KeyValue_2To1_Converter.m  geographic_msgs_msg_MapFeature_2To1_Converter.m  geographic_msgs_msg_RoutePath_1To2_Converter.m  geographic_msgs_msg_RouteSegment_2To1_Converter.m  geographic_msgs_msg_WayPoint_1To2_Converter.m  geographic_msgs_msg_WayPoint_2To1_Converter.m  getGeoPathRequest.m  getGeoPathResponse.m  getGeographicMapRequest.m  updateGeographicMapRequest.m  updateGeographicMapResponse.m  wayPoint.m
matlab_msg_gen/glnxa64/src/geographic_msgs/src/: geographic_msgs_BoundingBox_message.cpp  geographic_msgs_GeoPath_message.cpp  geographic_msgs_GeoPointStamped_message.cpp  geographic_msgs_GeoPoint_message.cpp  geographic_msgs_GeoPoseStamped_message.cpp  geographic_msgs_GeoPoseWithCovarianceStamped_message.cpp  geographic_msgs_GeoPoseWithCovariance_message.cpp  geographic_msgs_GeoPose_message.cpp  geographic_msgs_GeographicMapChanges_message.cpp  geographic_msgs_GeographicMap_message.cpp  geographic_msgs_GetGeoPath_service.cpp  geographic_msgs_GetGeographicMap_service.cpp  geographic_msgs_GetRoutePlan_service.cpp  geographic_msgs_KeyValue_message.cpp  geographic_msgs_MapFeature_message.cpp  geographic_msgs_RouteNetwork_message.cpp  geographic_msgs_RoutePath_message.cpp  geographic_msgs_RouteSegment_message.cpp  geographic_msgs_UpdateGeographicMap_service.cpp  geographic_msgs_WayPoint_message.cpp
matlab_msg_gen/glnxa64/src/labust_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen/glnxa64/src/labust_msgs/action/: TrackDiver.action
matlab_msg_gen/glnxa64/src/labust_msgs/include/labust_msgs/: visibility_control.h
matlab_msg_gen/glnxa64/src/labust_msgs/m/+ros/+internal/+ros2/+custommessages/+labust_msgs/: bodyForceReq.m  courseKeepingGoal.m  courseKeepingResult.m  dataEventsContainer.m  dockingPrimitiveServiceRequest.m  dockingPrimitiveServiceResponse.m  dockingResult.m  dockingServiceRequest.m  dynamicPositioning.m  etaReference.m  (+92 more)
matlab_msg_gen/glnxa64/src/labust_msgs/msg/: BodyForceReq.msg  MissionSetup.msg  NanomodemTDOA.msg  RegisterController.msg  StartNeptusParser.msg
matlab_msg_gen/glnxa64/src/labust_msgs/src/: labust_msgs_BodyForceReq_message.cpp  labust_msgs_BodyVelocityReq_message.cpp  labust_msgs_Bool6Axis_message.cpp  labust_msgs_ConfigureAxes_service.cpp  labust_msgs_ConfigureVelocityController_service.cpp  labust_msgs_ControllerInfo_message.cpp  labust_msgs_ControllerSelect_service.cpp  labust_msgs_ControllerState_message.cpp  labust_msgs_CourseKeepingFA_message.cpp  labust_msgs_CourseKeepingUA_message.cpp  labust_msgs_CourseKeeping_action.cpp  labust_msgs_DataEventsContainer_message.cpp  labust_msgs_DockingPrimitiveService_service.cpp  labust_msgs_DockingService_service.cpp  labust_msgs_Docking_action.cpp  labust_msgs_DynamicPositioningLLService_service.cpp  labust_msgs_DynamicPositioningPrimitiveService_service.cpp  labust_msgs_DynamicPositioning_action.cpp  labust_msgs_DynamicPositioning_message.cpp  labust_msgs_EnableControl_service.cpp  labust_msgs_EtaReference_message.cpp  labust_msgs_EvaluateExpression_service.cpp  labust_msgs_EventData_message.cpp  labust_msgs_ExternalEvent_message.cpp  labust_msgs_FSPathInfo_message.cpp  labust_msgs_Go2LLpointService_service.cpp  labust_msgs_Go2PointFA_message.cpp  labust_msgs_Go2PointUA_message.cpp  labust_msgs_Go2depthService_service.cpp  labust_msgs_Go2pointPrimitiveService_service.cpp  labust_msgs_Go2pointService_service.cpp  labust_msgs_GoToPoint_action.cpp  labust_msgs_GoalDescriptor_message.cpp  labust_msgs_HLMessage_message.cpp  labust_msgs_ISO_message.cpp  labust_msgs_IdentModel_message.cpp  labust_msgs_IdentifyModel_action.cpp  labust_msgs_LawnmoverService_service.cpp  labust_msgs_ManualConfiguration_message.cpp  labust_msgs_ManualConfigure_service.cpp  (+34 more)
matlab_msg_gen/glnxa64/src/labust_msgs/srv/: DockingPrimitiveService.srv  EnableControl.srv  Go2LLpointService.srv  RegisterControllerV2.srv  RegisterControllerV3.srv  SetHLMode.srv
(+924 files in other folders)
