<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>labust_msgs</name>
  <version>0.1.0</version>
  <description>This package provides message types, services and actions commonly used in Labust</description>
  <maintainer email="luka.mandic@fer.hr">Luka Mandic</maintainer>
  <license>Apache v2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

