cmake_minimum_required(VERSION 3.5)
project(geographic_msgs)
set(CMAKE_VERBOSE_MAKEFILE ON)
# Set CMAKE_BUILD_TYPE
set(CMAKE_BUILD_TYPE Release)
# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()
if(ALIAS_ROS2_TF2)
  add_definitions(-Dtf2=ros2_tf2)
  add_definitions(-Dtf2_ros=ros2_tf2_ros)
  add_definitions(-Dmessage_filters=ros2_message_filters)
endif()
# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package(rosidl_typesupport_c REQUIRED)
find_package(rosidl_typesupport_cpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package( class_loader REQUIRED)
find_package( console_bridge REQUIRED)
find_package( geometry_msgs REQUIRED)
find_package( rclcpp REQUIRED)
find_package( rcutils REQUIRED)
find_package( std_msgs REQUIRED)
find_package( unique_identifier_msgs REQUIRED)
include_directories("/usr/local/MATLAB/R2023a/extern/include")
include_directories("/usr/local/MATLAB/R2023a/extern/include/MatlabDataArray")
include_directories("/usr/local/MATLAB/R2023a/toolbox/ros/include/ros2")
include_directories("include/geographic_msgs")
set (CMAKE_SKIP_BUILD_RPATH false)
set (CMAKE_BUILD_WITH_INSTALL_RPATH true)
set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(msg_files
  "msg/BoundingBox.msg"
  "msg/GeoPath.msg"
  "msg/GeoPoint.msg"
  "msg/GeoPointStamped.msg"
  "msg/GeoPose.msg"
  "msg/GeoPoseStamped.msg"
  "msg/GeoPoseWithCovariance.msg"
  "msg/GeoPoseWithCovarianceStamped.msg"
  "msg/GeographicMap.msg"
  "msg/GeographicMapChanges.msg"
  "msg/KeyValue.msg"
  "msg/MapFeature.msg"
  "msg/RouteNetwork.msg"
  "msg/RoutePath.msg"
  "msg/RouteSegment.msg"
  "msg/WayPoint.msg"
)
set(srv_files
  "srv/GetGeoPath.srv"
  "srv/GetGeographicMap.srv"
  "srv/GetRoutePlan.srv"
  "srv/UpdateGeographicMap.srv"
)
set(action_files
)
rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  ${srv_files}
  ${action_files}
  DEPENDENCIES 
  geometry_msgs
  std_msgs
  unique_identifier_msgs
)
link_directories("/usr/local/MATLAB/R2023a/extern/bin/glnxa64")
# Library
add_library(
    geographic_msgs_matlab 
    SHARED
    src/geographic_msgs_BoundingBox_message.cpp
    src/geographic_msgs_GeoPath_message.cpp
    src/geographic_msgs_GeoPoint_message.cpp
    src/geographic_msgs_GeoPointStamped_message.cpp
    src/geographic_msgs_GeoPose_message.cpp
    src/geographic_msgs_GeoPoseStamped_message.cpp
    src/geographic_msgs_GeoPoseWithCovariance_message.cpp
    src/geographic_msgs_GeoPoseWithCovarianceStamped_message.cpp
    src/geographic_msgs_GeographicMap_message.cpp
    src/geographic_msgs_GeographicMapChanges_message.cpp
    src/geographic_msgs_KeyValue_message.cpp
    src/geographic_msgs_MapFeature_message.cpp
    src/geographic_msgs_RouteNetwork_message.cpp
    src/geographic_msgs_RoutePath_message.cpp
    src/geographic_msgs_RouteSegment_message.cpp
    src/geographic_msgs_WayPoint_message.cpp
    src/geographic_msgs_GetGeoPath_service.cpp
    src/geographic_msgs_GetGeographicMap_service.cpp
    src/geographic_msgs_GetRoutePlan_service.cpp
    src/geographic_msgs_UpdateGeographicMap_service.cpp
)
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
target_compile_options(geographic_msgs_matlab PUBLIC 
  $<$<OR:$<COMPILE_LANGUAGE:CXX>,$<COMPILE_LANGUAGE:C>>:
  -Wall -Wextra -Wpedantic
  >)
endif()
target_include_directories(geographic_msgs_matlab PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries( geographic_msgs_matlab
	"/usr/local/MATLAB/R2023a/sys/os/glnxa64/orig/libstdc++.so.6"
	"/usr/local/MATLAB/R2023a/extern/bin/glnxa64/libMatlabDataArray.so"
	${CMAKE_DL_LIBS}
	)
ament_target_dependencies(
  geographic_msgs_matlab
  "class_loader"
  "console_bridge"
  "geometry_msgs"
  "rclcpp"
  "rcutils"
  "std_msgs"
  "unique_identifier_msgs"
)
rosidl_target_interfaces(
	  geographic_msgs_matlab
      ${PROJECT_NAME} "rosidl_typesupport_cpp")
# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(geographic_msgs_matlab PRIVATE "GEOGRAPHIC_MSGS_BUILDING_LIBRARY")
install(
  DIRECTORY include/
  DESTINATION include
)
install(
  TARGETS geographic_msgs_matlab
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install (DIRECTORY m/ DESTINATION m/ FILES_MATCHING PATTERN "*.m")
ament_export_include_directories(
  include
)
ament_export_libraries(
  geographic_msgs_matlab
)
foreach(file_i ${CUDA_BINS})
add_custom_command(
                   TARGET 
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/_ert_rtw/${file_i}
				   )
add_custom_command(
                   TARGET 
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/codegen/exe//${file_i}
				   )				   
endforeach(file_i)
ament_package()
# Generated on Fri Jun 02 17:40:57 2023
